external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_fields_with_idents.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_fields_with_idents.move:3:23
  │
3 │     public struct Foo(x: u64) has copy, drop;
  │                       ^ Cannot use named fields in a positional definition
